# Volumetric-Cloud-Rendering

./: .gitmodules  CMakeLists.txt  CloudsManager.hpp  README.md  framebuffer.hpp  imgui.ini  main.cpp  mesh.cpp  mesh.hpp  object3d.cpp  object3d.hpp  renderer.hpp  scene.hpp  voxeltexture.hpp
resources/: compute.glsl  geometryFragment.glsl  geometryVertex.glsl  lightingFragment.glsl  lightingVertex.glsl
